# aid_coordinator

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  email_changes.sh  manage.py  pyproject.toml
aid_coordinator/: admin.py  asgi.py  context_processors.py  debug_toolbar.py  decorators.py  filters.py  helpers.py  middleware.py  settings.py  urls.py  views.py  widgets.py  wsgi.py
contacts/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_organisation_type.py  0003_alter_organisation_type.py  0004_alter_organisation_type.py  0005_alter_contact_organisation.py  0006_remove_contact_is_staff.py  0007_contact_listed_organisation_listed.py  0008_organisation_logo.py  0009_alter_contact_managers.py  0010_alter_contact_managers.py  0011_alter_contact_options_alter_organisation_type.py  0012_contact_requested_organisation.py  0013_contact_allow_publicity_organisation_allow_publicity.py  0013_contact_contact_through.py  0014_alter_contact_allow_publicity_alter_contact_listed_and_more.py  0015_merge_20230213_1114.py
jinja2/email/: welcome.txt  welcome.txt.j2
logistics/: admin.py  apps.py  filters.py  forms.py  models.py  resources.py  signals.py  views.py
logistics/migrations/: 0001_initial.py  0002_claim_when.py  0003_alter_claim_options.py  0004_alter_claim_when.py  0005_location.py  0006_shipment_current_location.py  0007_default_locations.py  0008_alter_claim_when.py  0009_alter_claim_requested_item.py  0015_location_managed_by.py  (+37 more)
supply_demand/: admin.py  api.py  apps.py  models.py  resources.py
(+72 files in other folders)
