[tool.poetry]
name = "aid_coordinator"
version = "0.1.0"
description = ""
authors = ["Sander Steffann <sander@steffann.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
daphne = "^3.0.2"
gunicorn = "^20.1.0"
django-debug-toolbar = "^3.2.4"
django-xff = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

